--- a/main.css
+++ b/main.css
@@ -59,6 +59,7 @@ body{
 @keyframes shower{
 
     50%{box-shadow: 0px 0px 25px yellow;}
+    85%{box-shadow: 0px 0px 5px yellow}
     100%{
         top: -5%;
         background-color: gold;
@@ -141,6 +142,49 @@ h3{
     color: white;
     border-bottom: 3px;
     margin-left: 10px;
+}
+
+#response1{
+    opacity: 0%;
+    text-align: center;
+}
+
+#response2{
+    opacity: 0%;
+    text-align: center;
+}
+
+.center{
+    justify-content: center;
+    align-content:center;
+    display: flex;
+}
+
+#answer{
+    background-color: white;
+    width: 80px;
+    height: 40px;
+    padding: 5px;
+    font-size: 18px;
+    border-radius: 20%;
+    border-style: none;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+#answer:hover{
+    background-color: gray;
+}
+
+@keyframes appear{
+    from{
+        width: 0%;
+        opacity: 0%;
+    }
+    to{
+        width: 99%;
+        opacity: 100%;
+    }
 }
 
 p{
