--- a/game.css
+++ b/game.css
@@ -5,14 +5,26 @@
     margin-bottom: 5px;
 }
 
+body{
+    background: linear-gradient(pink, black 40%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 #entry{
+    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
 }
 
+h3{
+    text-align:center;
+    color: white;
+}
+
 input{
     width: 15px;
-    height: 18px;
+    height: 23px;
     font-size: 18px;
     margin-left: 0px;
     margin-right: 0px;
@@ -21,6 +33,12 @@ input{
     border-right: none;
     border-left: none;
     border-top: none;
-    border-bottom: 2px solid gold;
+    border-bottom: 2px solid pink;
     text-align: center;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
+input:placeholder{
+    color: rbga(255, 255, 255, 0.8);
 }
