--- a/game.css
+++ b/game.css
@@ -33,7 +33,7 @@ input{
     border-right: none;
     border-left: none;
     border-top: none;
-    border-bottom: 2px solid pink;
+    border-bottom: 2px solid gold;
     text-align: center;
     padding-bottom: 5px;
     padding-top: 5px;
